--- a/src/app/admin/commande/add/add.component.html
+++ b/src/app/admin/commande/add/add.component.html
@@ -34,6 +34,16 @@
             </div>
 
             <div class="form-group">
+                <label for="region"> Date</label>
+                <input type="date" class="form-control" name="datec" [(ngModel)]="form.datec"  required
+                    #datec="ngModel" />
+                <div class="alert-danger" *ngIf="datec.errors && f.submitted">
+                    <div *ngIf="datec.errors.required">la région est requise</div>
+        
+                </div>
+            </div>
+
+            <div class="form-group">
                 <div class="row">
                     <div class="col-md-1 offset-md-11">
                         <button class="btn btn-warning" type="submit">add</button>
