--- a/src/app/admin/offer/offer.component.html
+++ b/src/app/admin/offer/offer.component.html
@@ -8,9 +8,11 @@
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <div class="title-text">
-                        <h2>List  of Services</h2>
+                          <h2>List  of Services</h2>
                     </div>
+                   
                 </div>
+                <button   class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add a new service" (click)="addservice()">ADD</button>
             </div>
         </div>
         <!-- row end-->
