--- a/src/app/admin/user/adduser/adduser.component.html
+++ b/src/app/admin/user/adduser/adduser.component.html
@@ -31,7 +31,7 @@
                                         <div class="form-group">
                                             <label for="fullName">Username</label>
                                             <input type="text" class="form-control" name="nbrunit"
-                                                [(ngModel)]="f.username" required #username="ngModel" />
+                                                [(ngModel)]="form.username" required #username="ngModel" />
                                             <div class="alert-danger" *ngIf="username.errors && f.submitted">
                                                 <div *ngIf="username.errors.required">username est requise</div>
                                             </div>
@@ -42,7 +42,7 @@
                                         <div class="form-group">
                                             <label for="lastName">Last Name</label>
                                             <input type="text" class="form-control" name="lastname"
-                                                [(ngModel)]="f.lastname" required #lastname="ngModel" />
+                                                [(ngModel)]="form.lastname" required #lastname="ngModel" />
                                             <div class="alert-danger" *ngIf="lastname.errors && f.submitted">
                                                 <div *ngIf="lastname.errors.required">username est requise</div>
                                             </div>
@@ -53,7 +53,7 @@
                                         <div class="form-group">
                                             <label class="required-field" for="firstname">First name</label>
                                             <input type="text" class="form-control" name="firstname"
-                                                [(ngModel)]="f.firstname" required #firstname="ngModel" />
+                                                [(ngModel)]="form.firstname" required #firstname="ngModel" />
                                             <div class="alert-danger" *ngIf="firstname.errors && f.submitted">
                                                 <div *ngIf="firstname.errors.required">username est requise</div>
                                             </div>
@@ -63,7 +63,7 @@
                                     <div class="col-sm-6 mb-3">
                                         <div class="form-group">
                                             <label for="phone">Phone Number</label>
-                                            <input type="text" class="form-control" name="phone" [(ngModel)]="f.phone"
+                                            <input type="text" class="form-control" name="phone" [(ngModel)]="form.phone"
                                                 required #phone="ngModel" />
                                             <div class="alert-danger" *ngIf="phone.errors && f.submitted">
                                                 <div *ngIf="phone.errors.required">phone est requise</div>
@@ -73,11 +73,11 @@
 
                                     <div class="col-sm-6 mb-3">
                                         <div class="form-group">
-                                            <label for="Address">Address</label>
-                                            <input type="text" class="form-control" name="phone" [(ngModel)]="f.phone"
+                                            <label for="address">address</label>
+                                            <input type="text" class="form-control" name="address" [(ngModel)]="form.address"
                                                 required #phone="ngModel" />
-                                            <div class="alert-danger" *ngIf="phone.errors && f.submitted">
-                                                <div *ngIf="phone.errors.required">phone est requise</div>
+                                            <div class="alert-danger" *ngIf="f.errors && f.submitted">
+                                                <div *ngIf="address.errors.required">phone est requise</div>
                                             </div>
                                         </div>
                                     </div>
@@ -85,7 +85,7 @@
                                         <div class="form-group">
                                             <label for="Address">role</label>
                                             <select name="role" (change)="changeoffer($event)" class="form-control"
-                                                [(ngModel)]="f.role" required #role="ngModel">
+                                                [(ngModel)]="form.role" required #role="ngModel">
                                                 <option value="ROLE_ADMIN">ADMIN</option>
                                                 <option value="ROLE_CLIENT">CLIENT</option>
                                                 <option value="ROLE_USER">USER</option>
@@ -98,7 +98,7 @@
                                     <div class="col-sm-12 mb-3">
                                         <div class="form-group">
                                             <label for="email">Email</label>
-                                            <input type="email" class="form-control" name="email" [(ngModel)]="f.email"
+                                            <input type="email" class="form-control" name="email" [(ngModel)]="form.email"
                                                 required #email="ngModel" />
                                             <div class="alert-danger" *ngIf="email.errors && f.submitted">
                                                 <div *ngIf="email.errors.required">email est requise</div>
