--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -75,62 +75,7 @@
       </svg>
     </div> -->
   </section>
-  <section class="section section-lg">
-    <div class="container">
-      <div class="row row-grid align-items-center">
-        <div class="col-md-6 order-md-2">
-          <img src="../../assets/img/theme/landingaboutus.jpg" class="img-fluid floating" style="height: 100%; width: 100%;" >
-        </div>
-        <div class="col-md-6 order-md-1">
-          <div class="pr-md-5">
-            <div class="icon icon-lg icon-shape icon-shape-success shadow rounded-circle mb-5">
-              <i class="ni ni-settings-gear-65"></i>
-            </div>
-            <h3>About Us</h3>
-            <p>Drobee is a Tunisian technology start-up. Starting with intelligent drones, we bring smart technology solutions to the agriculture industry. Our goal is to boost yields by using AI, drone technology, and robotics to automate farming chores.</p>
-            <ul class="list-unstyled mt-5">
-              <li class="py-2">
-                <div class="d-flex align-items-center">
-                  <div>
-                    <div class="badge badge-circle badge-success mr-3">
-                      <i class="ni ni-settings-gear-65"></i>
-                    </div>
-                  </div>
-                  <div>
-                    <h6 class="mb-0">Carefully crafted components</h6>
-                  </div>
-                </div>
-              </li>
-              <li class="py-2">
-                <div class="d-flex align-items-center">
-                  <div>
-                    <div class="badge badge-circle badge-success mr-3">
-                      <i class="ni ni-html5"></i>
-                    </div>
-                  </div>
-                  <div>
-                    <h6 class="mb-0">Amazing page examples</h6>
-                  </div>
-                </div>
-              </li>
-              <li class="py-2">
-                <div class="d-flex align-items-center">
-                  <div>
-                    <div class="badge badge-circle badge-success mr-3">
-                      <i class="ni ni-satisfied"></i>
-                    </div>
-                  </div>
-                  <div>
-                    <h6 class="mb-0">Super friendly support team</h6>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+ 
   <section class="section bg-secondary">
     <div class="row justify-content-center text-center mb-lg">
       <div class="col-lg-8">
@@ -162,10 +107,12 @@
             <p class="lead">{{offer.description}}</p>
            <!-- <p>The kit comes with three pre-built pages to help you get started faster. You can change the text and images and youre good to go.</p>
             <p>The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go.</p> -->
-            <a href="javascript:void(0)" class="font-weight-bold text-warning mt-5">A beautiful UI Kit for impactful websites</a>
+            <a href="javascript:void(0)" class="font-weight-bold text-warning mt-5"></a>
           </div>
         </div>
       </div>
+      <section class="section section-lg">
+      </section>
     </div>
   </section>
   <section class="section pb-0 bg-gradient-warning">
