--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -71,7 +71,7 @@
           </a>
         </li>
         <li class="nav-item dropdown" *ngIf="showAdminBoard">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button" [routerLink]="['admin/offer']">
+          <a class="nav-link no-caret" data-toggle="dropdown" role="button" [routerLink]="['admin/service']">
             <i class="ni ni-ui-04 d-lg-none"></i>
             <span class="nav-link-inner--text">services</span>
           </a>
@@ -108,6 +108,17 @@
 
           </a>
         </li>
+        <li class="nav-item" ngbDropdown placement="bottom-right" *ngIf="isLoggedIn">
+          <a class="nav-link nav-link-icon no-caret" id="navbar-default_dropdown_1" ngbDropdownToggle>
+            <i class="ni ni-bell-55 ni-x2"></i>
+            <span class="nav-link-inner--text d-lg-none">Notification</span>
+          </a>
+          <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
+            <a class="dropdown-item" href="javascript:void(0)" *ngFor="let message of messages" >{{ message }}</a>
+            <div *ngif="!nonotification"><a class="dropdown-item" href="javascript:void(0)"  >{{ message }}</a></div> 
+          </div>
+        </li>
+        
         <li class="nav-item dropdown" *ngIf="isLoggedIn">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
             <i class="ni ni-ui-04 d-lg-none"></i>
