--- a/src/app/admin/commande/commande.component.html
+++ b/src/app/admin/commande/commande.component.html
@@ -2,7 +2,7 @@
     <header class="jumbotron">
     </header>
   
-    <button  *ngIf="!isadmin" class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add commande" (click)="addcommande()">ADD</button> 
+    <button  *ngIf="!isadmin" class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="place a new order" (click)="addcommande()">ADD</button> 
 </div>
     <div class="event-schedule-area-two bg-color pad100">
         <div class="container">
