--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -4,7 +4,7 @@
       
     </header>
     <div>
-        <button class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add new user" (click)="adduser()">ADD</button> 
+       <!--<button class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add new user" (click)="adduser()">ADD</button> -->  
         <br>
         <br>
       <div class="table-responsive-md">
