--- a/src/app/admin/offer/offer.component.html
+++ b/src/app/admin/offer/offer.component.html
@@ -1,18 +1,19 @@
 <div class="container">
     <header class="jumbotron">
     </header>
-    </div>
+    <button class="btn btn-1 btn-info" type="button" placement="top" ngbTooltip="add a new service"
+    (click)="addservice()">ADD</button>
+</div>
 <div class="event-schedule-area-two bg-color pad100">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <div class="title-text">
-                          <h2>List  of Services</h2>
+                        <h2>List of Services</h2>
                     </div>
-                   
+
                 </div>
-                <button   class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="add a new service" (click)="addservice()">ADD</button>
             </div>
         </div>
         <!-- row end-->
@@ -40,7 +41,7 @@
                                         </th>
                                         <td>
                                             <div class="event-img">
-                                                <img src="{{offer.image.url}}"  >
+                                                <img src="{{offer.image.url}}">
                                             </div>
                                         </td>
                                         <td>
@@ -63,27 +64,26 @@
                                                 <a class="btn btn-primary" href="#">Read More</a>
                                             </div> -->
                                             <li class="nav-item" ngbDropdown placement="bottom-right">
-                                                <a class="nav-link nav-link-icon no-caret" id="navbar-default_dropdown_1" ngbDropdownToggle>
+                                                <a class="nav-link nav-link-icon no-caret"
+                                                    id="navbar-default_dropdown_1" ngbDropdownToggle>
                                                     <i class="ni ni-settings-gear-65"></i>
                                                     <span class="nav-link-inner--text d-lg-none"></span>
-                                                  </a>
-                                                <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
-                                                  <a class="dropdown-item" (click)="delete(offer.id)">delete</a>
-                                                  <a class="dropdown-item" (click)="update(offer.id)">update</a>
-                                                
+                                                </a>
+                                                <div class="dropdown-menu-right"
+                                                    aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
+                                                    <a class="dropdown-item" (click)="delete(offer.id)">delete</a>
+                                                    <a class="dropdown-item" (click)="update(offer.id)">update</a>
+
                                                 </div>
-                                              </li>
+                                            </li>
                                         </td>
                                     </tr>
-                                   
+
                                 </tbody>
                             </table>
                         </div>
                     </div>
-                   
-                </div>
-                <div class="primary-btn text-center">
-                    <a href="#" class="btn btn-primary">Download Schedule</a>
+
                 </div>
             </div>
         </div>
