--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -182,7 +182,7 @@
       <div class="row justify-content-center text-center mb-lg">
         <div class="col-lg-8">
           <h2 class="display-3">The amazing Team</h2>
-          <p class="lead text-muted">According to the National Oceanic and Atmospheric Administration, Ted, Scambos, NSIDClead scentist, puts the potentially record maximum.</p>
+          <!--<p class="lead text-muted">According to the National Oceanic and Atmospheric Administration, Ted, Scambos, NSIDClead scentist, puts the potentially record maximum.</p>-->
         </div>
       </div>
       <div class="row">
