--- a/src/app/admin/commande/commande.component.html
+++ b/src/app/admin/commande/commande.component.html
@@ -1,115 +1,118 @@
 <div class="container">
     <header class="jumbotron">
     </header>
-  
-    <button  *ngIf="!isadmin" class="btn btn-1 btn-info" type="button"  placement="top"    ngbTooltip="place a new order" (click)="addcommande()">ADD</button> 
+
+    <button *ngIf="!isadmin" class="btn btn-1 btn-info" type="button" placement="top" ngbTooltip="place a new order"
+        (click)="addcommande()">ADD</button>
 </div>
-    <div class="event-schedule-area-two bg-color pad100">
-        <div class="container">
-          <div class="row">
+<div class="event-schedule-area-two bg-color pad100">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <div class="title-text">
-                        <h2>List  of Commandes</h2>
+                        <h2>List of Commandes</h2>
                     </div>
                 </div>
             </div>
         </div>
-            <!-- row end-->
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="tab-content" id="myTabContent">
-                        <div class="tab-pane fade active show" id="home" role="tabpanel">
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                          <th scope="row">#</th>
-                                          <th scope="col" *ngIf="isadmin">username</th>
-                                          <th scope="col">offername</th>
-                                          <th scope="col">region</th>
-                                          <th scope="col">nbrunit</th>
-                                          <th scope="col">date</th>
-                                          <th scope="col">status</th>
-                                          <th scope="col" >Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr class="inner-box" *ngFor="let commande of commandes ; index as i" >
-                                            <th scope="row">
-                                                <div class="event-date">
-                                                    <span>{{i+1}}</span>
-                                                </div>
-                                            </th>
-                                            <td *ngIf="isadmin">
-                                                <div class="event-img" >
-                                                   {{ commande.username }}
-                                                </div>
-                                            </td>
-                                            <td>
-                                                <div class="event-wrap">
-                                                    <h3><a href="#">{{ commande.offername }}</a></h3>
-                                                    <div class="meta">
-                                                        <div class="organizers">
-                                                         
-                                                        </div>
-                                                        <div class="categories">
-                                                          
-                                                        </div>
-                                                        <div class="time">
-                                                           
-                                                        </div>
+        <!-- row end-->
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade active show" id="home" role="tabpanel">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="row">#</th>
+                                        <th scope="col" *ngIf="isadmin">username</th>
+                                        <th scope="col">offername</th>
+                                        <th scope="col">region</th>
+                                        <th scope="col">nbrunit</th>
+                                        <th scope="col">date</th>
+                                        <th scope="col">status</th>
+                                        <th scope="col">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="inner-box" *ngFor="let commande of commandes ; index as i">
+                                        <th scope="row">
+                                            <div class="event-date">
+                                                <span>{{i+1}}</span>
+                                            </div>
+                                        </th>
+                                        <td *ngIf="isadmin">
+                                            <div class="event-img">
+                                                {{ commande.username }}
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="event-wrap">
+                                                <h3><a href="#">{{ commande.offername }}</a></h3>
+                                                <div class="meta">
+                                                    <div class="organizers">
+
+                                                    </div>
+                                                    <div class="categories">
+
+                                                    </div>
+                                                    <div class="time">
+
                                                     </div>
                                                 </div>
-                                            </td>
-                                            <td>
-                                                <div class="r-no">
-                                                    <span>{{ commande.region }}</span>
-                                                </div>
-                                            </td>
-                                            <td>
-                                              <div class="r-no">
-                                                  <span>{{ commande.nbrunit }}</span>
-                                              </div>
-                                          </td>
-                                          <td>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="r-no">
+                                                <span>{{ commande.region }}</span>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="r-no">
+                                                <span>{{ commande.nbrunit }}</span>
+                                            </div>
+                                        </td>
+                                        <td>
                                             <div class="r-no">
                                                 <span>{{ commande.datec| date: 'dd/MM/yyyy'}}</span>
                                             </div>
                                         </td>
                                         <td>
-                                          <div class="r-no">
-                                              <span>{{ commande.status }}</span>
-                                          </div>
-                                      </td>
-                                            <td>
-                                                <div class="primary-btn">
-                                                  <li class="nav-item" ngbDropdown placement="bottom-right">
-                                                    <a class="nav-link nav-link-icon no-caret" id="navbar-default_dropdown_1" ngbDropdownToggle>
+                                            <div class="r-no">
+                                                <span>{{ commande.status }}</span>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="primary-btn">
+                                                <li class="nav-item" ngbDropdown placement="bottom-right">
+                                                    <a class="nav-link nav-link-icon no-caret"
+                                                        id="navbar-default_dropdown_1" ngbDropdownToggle>
                                                         <i class="ni ni-settings-gear-65"></i>
                                                         <span class="nav-link-inner--text d-lg-none"></span>
-                                                      </a>
-                                                    <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
-                                                      <a class="dropdown-item"  (click)="editcommande(commande.id)" >Update</a>
-                                                      <a class="dropdown-item" (click)="deletecommande(commande.id)">Delete</a>
-                                                      <a *ngIf="isadmin" class="dropdown-item" (click)="confirmercommande(commande.id)">detail</a>
+                                                    </a>
+                                                    <div class="dropdown-menu-right"
+                                                        aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
+                                                        <a class="dropdown-item"
+                                                            (click)="editcommande(commande.id)">Update</a>
+                                                        <a class="dropdown-item"
+                                                            (click)="deletecommande(commande.id)">Delete</a>
+                                                        <a *ngIf="isadmin" class="dropdown-item"
+                                                            (click)="confirmercommande(commande.id)">detail</a>
                                                     </div>
-                                                  </li>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                       
-                                    </tbody>
-                                </table>
-                            </div>
+                                                </li>
+                                            </div>
+                                        </td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
                         </div>
-                       
                     </div>
-                   
+
                 </div>
+
             </div>
         </div>
     </div>
-
-
-  
+</div>
