--- a/src/app/admin/reclamation/reclamation.component.html
+++ b/src/app/admin/reclamation/reclamation.component.html
@@ -27,7 +27,7 @@
                                         <th class="text-center" scope="col">#</th>
                                         <th scope="col">feedback</th>
                                         <th scope="col">Status</th>
-                                        <th class="text-center" scope="col">action</th>
+                                        <th class="text-center" scope="col" *ngIf="isadmin">action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -56,10 +56,18 @@
                                                 <span>{{reclamation.status}}</span>
                                             </div>
                                         </td>
-                                        <td>
+                                        <td *ngIf="isadmin">
                                             <div class="primary-btn">
-                                                <a class="btn btn-primary" href="#">Read More</a>
-                                            </div>
+                                                <li class="nav-item" ngbDropdown placement="bottom-right">
+                                                  <a class="nav-link nav-link-icon no-caret" id="navbar-default_dropdown_1" ngbDropdownToggle>
+                                                      <i class="ni ni-settings-gear-65"></i>
+                                                      <span class="nav-link-inner--text d-lg-none"></span>
+                                                    </a>
+                                                  <div class="dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1" ngbDropdownMenu>
+                                                    <a  class="dropdown-item" (click)="detailreclamation(reclamation.id)">detail</a>
+                                                  </div>
+                                                </li>
+                                              </div>
                                         </td>
                                     </tr>
                                    
